--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 spring:
   h2:
     console:
-      enabled:true:
+      enabled: true
+      path: /h2
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
 
   datasource:
-    url: jdbc:h2:file:./mydb;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
     driverClassName: org.h2.Driver
     username: sa
     password: sa
