--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,17 @@
+server:
+  port: 8080
+  servlet:
+    session:
+      persistence: false
+      timeout: 0
+
+management:
+  security.enabled: false
+  endpoints.web.exposure.include:
+    - prometheus
+    - health
+    - metrics
+
 spring:
   h2:
     console:
@@ -7,9 +21,9 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
-
   datasource:
     url: jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
     driverClassName: org.h2.Driver
     username: sa
     password: sa
+
