--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,18 @@ management:
     - prometheus
     - health
     - metrics
+    - shutdown
 
 spring:
+  datasource:
+    url: jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
+    driverClassName: org.h2.Driver
+    username: sa
+    password: sa
+
+  application:
+    admin:
+      enabled: true
   h2:
     console:
       enabled: true
@@ -21,9 +31,4 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
-  datasource:
-    url: jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
-    driverClassName: org.h2.Driver
-    username: sa
-    password: sa
 
