--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -2,4 +2,4 @@ server.port: 18080
 
 spring:
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:bank_test;DB_CLOSE_DELAY=-1
